plugins/kotlin/idea/tests/testData/highlighterMetaInfo/mismatchPackageDirectoryFileLevelProblemDeclarations.kt.highlighting.k2
<!FILE_LEVEL_HIGHLIGHTING!>fun foo() {
    // <!HIGHLIGHTING("descr='TODO'")!>TODO<!>
    // <!HIGHLIGHTING("descr='TODO'")!>TODO<!>
    // <!HIGHLIGHTING("descr='TODO'")!>TODO<!>
    // <!HIGHLIGHTING("descr='TODO'")!>TODO<!>
}
// TOOL: org.jetbrains.kotlin.idea.k2.codeinsight.inspections.PackageDirectoryMismatchInspection

// IMPLICIT_PACKAGE_PREFIX: "foo"
// HIGHLIGHT_WARNINGS
// ALLOW_ERRORS<!>
